[gd_scene load_steps=6 format=2]

[ext_resource path="res://Common/Player/UsableItems/FishingRod/ChargingRod/ChargingFishingRodXXXX.gd" type="Script" id=1]
[ext_resource path="res://Common/Player/UsableItems/FishingRod/Hook.png" type="Texture" id=2]
[ext_resource path="res://Common/Player/UsableItems/FishingRod/FishingRod.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 2.0

[node name="ChargingFishingRod" type="Node2D"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="PivotPoint" type="Position2D" parent="."]
rotation = 0.785398

[node name="Sprite" type="Sprite" parent="PivotPoint"]
position = Vector2( 2, -21 )
texture = ExtResource( 3 )

[node name="HookPoint" type="StaticBody2D" parent="PivotPoint"]
position = Vector2( 0, -52 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PivotPoint/HookPoint"]
shape = SubResource( 1 )
disabled = true

[node name="PinJoint2D" type="DampedSpringJoint2D" parent="PivotPoint/HookPoint"]
node_a = NodePath("..")
node_b = NodePath("Hook")
bias = 0.9
length = 2.0
rest_length = 1.0
stiffness = 10.6
damping = 16.0

[node name="Hook" type="RigidBody2D" parent="PivotPoint/HookPoint/PinJoint2D"]
rotation = -1.56796
mass = 2.0

[node name="Sprite" type="Sprite" parent="PivotPoint/HookPoint/PinJoint2D/Hook"]
rotation = 1.5708
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PivotPoint/HookPoint/PinJoint2D/Hook"]
shape = SubResource( 2 )
